@@ -1,25 +1,0 @@
-
-114: //@isa('Foo')
-             ^    
-found bareword where operator expected
-
-117: //@isa('Foo','Bar')
-             ^          
-found bareword where operator expected
-
-117: //@isa('Foo','Bar')
-                ---^    
-found bareword where operator expected (previous token underlined)
-
-120: //@isa('Baz')
-             ^    
-found bareword where operator expected
-
-131: with 'Quux';
-           ^     
-found bareword where operator expected
-
-136: //@does('Quux')
-              ^     
-found bareword where operator expected
-170:	hit EOF seeking end of quote/pattern starting at line 105 ending in '
