@@ -2,7 +2,7 @@
 
 use strict;
 use warnings;
-use Test::More tests => 5;
+use Test::More tests => 6;
 use TPath::Forester::Ref;
 
 my $ref = {
@@ -18,7 +18,8 @@ ok defined $index, 'able to index wrapped tree';
 
 my @nodes = tfr->path(q{//*})->dsel($tree);
 is @nodes, 6, 'found correct number of nodes using dsel';
-is $nodes[0], 'b', 'correct first node from dsel';
-is ref $nodes[-1], 'HASH', 'correct last node from dsel';
+is $nodes[1], 'b', 'correct second node from dsel';
+is ref $nodes[-2], 'HASH', 'penultimate node from dsel';
+is ref $nodes[-4], 'ARRAY', 'proantepenultimate node from dsel';
 
 done_testing();
